@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.28 2003/08/09 11:16:19 seb Exp $
+# $NetBSD: Makefile,v 1.29 2003/09/16 09:24:57 agc Exp $
 #
 
-DISTNAME=		jwhois-3.2.1
-PKGREVISION=		1
+DISTNAME=		jwhois-3.2.2
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_GNU:=jwhois/}
 
